data/derived/comb/progs/unify/prog3417.ml.out
Characters 39-40:
  let fixpoint (f,b) = wwhile ((fun x -> x ), b);;
                                         ^
Error: This expression has type 'a but an expression was expected of type
         'a * bool
       The type variable 'a occurs inside 'a * bool
